# c-glfw-opengl-template

./: CMakeLists.txt
src/: main.c
